fixed login height on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -7,7 +7,7 @@
 
 html {
   font-size: 62.5%;
-  height: 100%;
+  height: 100vh;
 }
 
 body {
